--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 29 21:16:37 ICT 2018
-sdk.dir=C\:\\Users\\kuhas\\AppData\\Local\\Android\\Sdk
+#Mon Feb 05 11:53:40 ICT 2018
+sdk.dir=C\:\\Users\\HelloKitty\\AppData\\Local\\Android\\Sdk
